@@ -12,7 +12,7 @@ PKG_ADDON_NAME="Jackett"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_ADDON_REQUIRES="tools.mono:0.0.0"
 PKG_MAINTAINER="thoradia"
-PKG_REV="19"
+PKG_REV="20"
 PKG_SHORTDESC="$PKG_ADDON_NAME: proxy to tracker sites"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) works as a proxy server: it translates queries from applications (CouchPotato, Mylar, SickRage, Sonarr,  etc.) into tracker-site-specific HTTP queries, parses the HTML response, then sends results back to the requesting software. This allows for getting recent uploads (like RSS) and performing searches. Jackett is a single repository of maintained indexer scraping and translation logic, removing the burden from other applications."
 PKG_DISCLAIMER="Keep it legal and carry on"
